Added add/ update /delete methods and basic search with list

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,7 @@ dist
 .pnp.*
 /.angular
 package-lock.json
+.vs/VSWorkspaceState.json
+.vs/ng-tour-of-heroes-tutorial/FileContentIndex/7778ba51-4004-489e-90bd-4244f3427ed5.vsidx
+.vs/slnx.sqlite
+.vs/ng-tour-of-heroes-tutorial/v17/.wsuo
